// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditableText /> should match snapshot as date input 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_inlineBlock__7o6k06fu useBoxStyles_position_relative__7o6k06fg EditableText_root__n0hvwi0"
  tabindex="0"
>
  <span
    class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_primary__w6to7ia useTextStyles_fontWeight_normal__w6to7io useTextStyles_noWrap__w6to7ir useTextStyles_sizes_4__w6to7i4 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_primary__w6to7ia EditableText_text__n0hvwi1"
  >
    Hello World!
  </span>
</div>
`;

exports[`<EditableText /> should match snapshot for default bullet text 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_inlineBlock__7o6k06fu useBoxStyles_position_relative__7o6k06fg EditableText_root__n0hvwi0"
  tabindex="0"
>
  <span
    class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_primary__w6to7ia useTextStyles_fontWeight_normal__w6to7io useTextStyles_noWrap__w6to7ir useTextStyles_sizes_4__w6to7i4 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_primary__w6to7ia EditableText_text__n0hvwi1"
  >
    Hello World!
  </span>
</div>
`;

exports[`<EditableText /> should match snapshot with custom size 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_display_inlineBlock__7o6k06fu useBoxStyles_position_relative__7o6k06fg EditableText_root__n0hvwi0"
  tabindex="0"
>
  <span
    class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06fh useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_muted__w6to7ih useTextStyles_fontWeight_normal__w6to7io useTextStyles_noWrap__w6to7ir useTextStyles_sizes_5__w6to7i5 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_muted__w6to7ih useTextStyles_sizes_5__w6to7i5 EditableText_text__n0hvwi1"
  >
    Hello World!
  </span>
</div>
`;
